--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -277,6 +277,8 @@
     <Compile Include="Model\TypeLabelAttribute.cs" />
     <Compile Include="Model\Variables\DynamicText.cs" />
     <Compile Include="Model\Variables\DynamicTextDatabase.cs" />
+    <Compile Include="Model\Variables\IDynamicTextFunction.cs" />
+    <Compile Include="Model\Variables\IDynamicTextFunctionSubstitute.cs" />
     <Compile Include="Model\Variables\VariablesManager.cs" />
     <Compile Include="Model\VTRs\CasparCgPlayout.cs" />
     <Compile Include="Model\VTRs\Vtr.cs" />
