--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Model\TypeLabelAttribute.cs" />
     <Compile Include="Model\Variables\DynamicText.cs" />
     <Compile Include="Model\Variables\DynamicTextDatabase.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionRegister.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunction.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunctionSubstitute.cs" />
     <Compile Include="Model\Variables\VariablesManager.cs" />
