--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -221,6 +221,12 @@
     <Compile Include="GUI\UMDs\UmdList.Designer.cs">
       <DependentUpon>UmdList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Variables\DynamicTextList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Variables\DynamicTextList.Designer.cs">
+      <DependentUpon>DynamicTextList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\VTRs\CasparCgPlayoutEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -395,6 +401,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
       <DependentUpon>UmdList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Variables\DynamicTextList.resx">
+      <DependentUpon>DynamicTextList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\VTRs\CasparCgPlayoutEditorForm.resx">
       <DependentUpon>CasparCgPlayoutEditorForm.cs</DependentUpon>
