--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Model\Variables\DynamicTextFunctionArgumentType.cs" />
     <Compile Include="Model\Variables\DynamicTextDatabase.cs" />
     <Compile Include="Model\Variables\DynamicTextFunctionRegister.cs" />
+    <Compile Include="Model\Variables\DynamicTextSubstituteBuilder.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunction.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunctionSubstitute.cs" />
     <Compile Include="Model\Variables\VariablesManager.cs" />
