--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -298,6 +298,9 @@
     <Compile Include="Model\Settings\Setting.cs" />
     <Compile Include="Model\Settings\SettingsManager.cs" />
     <Compile Include="Model\Settings\Converters\SettingValueConverterAttribute.cs" />
+    <Compile Include="Model\Signals\SignalCategory.cs" />
+    <Compile Include="Model\Signals\Signal.cs" />
+    <Compile Include="Model\Signals\SignalDatabases.cs" />
     <Compile Include="Model\Signals\SignalsManager.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamViewerCount.cs" />
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerHhMmSs.cs" />
