--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -132,6 +132,12 @@
     <Compile Include="GUI\Settings\StringSettingEditor.Designer.cs">
       <DependentUpon>StringSettingEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Signals\SignalEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Signals\SignalEditorForm.Designer.cs">
+      <DependentUpon>SignalEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Signals\SignalCategoryList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +149,12 @@
     </Compile>
     <Compile Include="GUI\Signals\SignalList.Designer.cs">
       <DependentUpon>SignalList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Signals\SignalCategoryEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Signals\SignalCategoryEditorForm.Designer.cs">
+      <DependentUpon>SignalCategoryEditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Streams\StreamEditorFormBase.cs">
       <SubType>Form</SubType>
@@ -411,11 +423,17 @@
     <EmbeddedResource Include="GUI\Settings\StringSettingEditor.resx">
       <DependentUpon>StringSettingEditor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Signals\SignalEditorForm.resx">
+      <DependentUpon>SignalEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Signals\SignalCategoryList.resx">
       <DependentUpon>SignalCategoryList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Signals\SignalList.resx">
       <DependentUpon>SignalList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Signals\SignalCategoryEditorForm.resx">
+      <DependentUpon>SignalCategoryEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Streams\StreamEditorFormBase.resx">
       <DependentUpon>StreamEditorFormBase.cs</DependentUpon>
