--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -299,6 +299,12 @@
     <Compile Include="GUI\UMDs\UmdList.Designer.cs">
       <DependentUpon>UmdList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Variables\BooleanList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Variables\BooleanList.Designer.cs">
+      <DependentUpon>BooleanList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Variables\DynamicTextList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -548,6 +554,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
       <DependentUpon>UmdList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Variables\BooleanList.resx">
+      <DependentUpon>BooleanList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Variables\DynamicTextList.resx">
       <DependentUpon>DynamicTextList.cs</DependentUpon>
