--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -73,9 +73,12 @@
       <DependentUpon>ChildWindowWithTitleTwoParts.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\GeneralComponents\DropDowns\ComboBoxAdapter.cs" />
+    <Compile Include="GUI\GeneralComponents\DropDowns\EnumComboBoxAdapterFactory.cs" />
+    <Compile Include="GUI\GeneralComponents\DropDowns\ComboBoxAdapterFactory.cs" />
     <Compile Include="GUI\GeneralComponents\DropDowns\ComboBoxAdapterHelpers.cs" />
     <Compile Include="GUI\GeneralComponents\DropDowns\EnumComboBoxAdapter.cs" />
     <Compile Include="GUI\GeneralComponents\DropDowns\IComboBoxAdapter.cs" />
+    <Compile Include="GUI\GeneralComponents\DropDowns\IComboBoxAdapterFactory.cs" />
     <Compile Include="GUI\GeneralComponents\Tables\CustomDataGridViewComboBoxItem.cs" />
     <Compile Include="GUI\ModelEditorFormTypeRegister.cs" />
     <Compile Include="GUI\GeneralComponents\GrowLabel.cs">
