--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -400,10 +400,12 @@
     <Compile Include="Model\Settings\Setting.cs" />
     <Compile Include="Model\Settings\SettingsManager.cs" />
     <Compile Include="Model\Settings\Converters\SettingValueConverterAttribute.cs" />
+    <Compile Include="Model\Signals\ISignalTallySource.cs" />
     <Compile Include="Model\Signals\SignalCategory.cs" />
     <Compile Include="Model\Signals\Signal.cs" />
     <Compile Include="Model\Signals\SignalDatabases.cs" />
     <Compile Include="Model\Signals\SignalsManager.cs" />
+    <Compile Include="Model\Signals\SignalTallyType.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamViewerCount.cs" />
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerHhMmSs.cs" />
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerTotalMinutes.cs" />
