--- a/BMD.Switcher/BMD.Switcher.csproj
+++ b/BMD.Switcher/BMD.Switcher.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="InputHelpers.cs" />
+    <Compile Include="InputMonitor.cs" />
+    <Compile Include="MixEffectBlockHelpers.cs" />
+    <Compile Include="MixEffectBlockMonitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Switcher.cs" />
+    <Compile Include="SwitcherMonitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="BMDSwitcherAPI">
