--- a/ThreadHelpers/ThreadHelpers.csproj
+++ b/ThreadHelpers/ThreadHelpers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9CEE499-CF5C-419A-8CF0-66F20596B820}</ProjectGuid>
+    <ProjectGuid>{398DE4A8-DFBF-4130-83AC-EF37DA249587}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BMD.Switcher</RootNamespace>
-    <AssemblyName>BMD.Switcher</AssemblyName>
+    <RootNamespace>ThreadHelpers</RootNamespace>
+    <AssemblyName>ThreadHelpers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -43,30 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InputHelpers.cs" />
-    <Compile Include="InputMonitor.cs" />
-    <Compile Include="MixEffectBlockHelpers.cs" />
-    <Compile Include="MixEffectBlockMonitor.cs" />
+    <Compile Include="InvokeHelper.cs" />
+    <Compile Include="InvokeHelperForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InvokeHelperForm.Designer.cs">
+      <DependentUpon>InvokeHelperForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Switcher.cs" />
-    <Compile Include="SwitcherMonitor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="BMDSwitcherAPI">
-      <Guid>{8A92B919-156C-4D61-94EF-03F9BE4004B0}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ThreadHelpers\ThreadHelpers.csproj">
-      <Project>{398de4a8-dfbf-4130-83ac-ef37da249587}</Project>
-      <Name>ThreadHelpers</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="InvokeHelperForm.resx">
+      <DependentUpon>InvokeHelperForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
