--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -461,6 +461,9 @@
     <Compile Include="Model\Variables\IDynamicTextFunctionSubstitute.cs" />
     <Compile Include="Model\Variables\VariablesManager.cs" />
     <Compile Include="Model\VTRs\CasparCgPlayout.cs" />
+    <Compile Include="Model\VTRs\DynamicTextFunctions\VtrState.cs" />
+    <Compile Include="Model\VTRs\DynamicTextFunctions\VtrStateTranslated.cs" />
+    <Compile Include="Model\VTRs\DynamicTextFunctions\VtrElapsedTimeHhMmSs.cs" />
     <Compile Include="Model\VTRs\DynamicTextFunctions\VtrRemainingTimeHhMmSs.cs" />
     <Compile Include="Model\VTRs\Vtr.cs" />
     <Compile Include="Model\VTRs\VtrDatabase.cs" />
