--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -183,6 +183,12 @@
     <Compile Include="GUI\Routers\RouterEditorFormBase.Designer.cs">
       <DependentUpon>RouterEditorFormBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\SerialPorts\SerialPortList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\SerialPorts\SerialPortList.Designer.cs">
+      <DependentUpon>SerialPortList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Settings\ISettingEditorControl.cs" />
     <Compile Include="GUI\Settings\SettingEditorBase.cs">
       <SubType>UserControl</SubType>
@@ -568,6 +574,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Routers\RouterEditorFormBase.resx">
       <DependentUpon>RouterEditorFormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\SerialPorts\SerialPortList.resx">
+      <DependentUpon>SerialPortList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Settings\SettingEditorBase.resx">
       <DependentUpon>SettingEditorBase.cs</DependentUpon>
